Use URI-based URL creation for consistent Javadoc official links
The URL(String) constructor is deprecated since Java 20. Update Javadoc
link creation to use URI.toURL() to align with recommended Java
practices and ensure consistency with official documentation links.